change task good cheap fast

--- a/if/good_cheap_fast/index.html
+++ b/if/good_cheap_fast/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Good, Cheap, Fast</title>
+    <title>Хороший, дешёвый, быстрый</title>
   </head>
   <body>
-    <h2>How do you want your project to be?</h2>
+    <h2>Каким вы хотите видеть свой проект?</h2>
     
     <div class="toggle-container">
       <input type="checkbox" id="good" class="toggle">
       <label for="good" class="label">
         <div class="ball"></div>
       </label>
-      <span>Good</span>
+      <span>Хороший</span>
     </div>
 
     <div class="toggle-container">
@@ -22,7 +22,7 @@
       <label for="cheap" class="label">
         <div class="ball"></div>
       </label>
-      <span>Cheap</span>
+      <span>Дешёвый</span>
     </div>
 
     <div class="toggle-container">
@@ -30,8 +30,9 @@
       <label for="fast" class="label">
         <div class="ball"></div>
       </label>
-      <span>Fast</span>
+      <span>Быстрый</span>
     </div>
+    
     <script src="script.js"></script>
   </body>
 </html>
