--- a/if/score_keeper/index.html
+++ b/if/score_keeper/index.html
@@ -2,27 +2,27 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Score Keeper</title>
-  <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi|Space+Mono" rel="stylesheet"><link rel="stylesheet" href="./style.css">
-
+  <title>Счетчик игры</title>
+  <link href="https://fonts.googleapis.com/css?family=Baloo+Thambi|Space+Mono" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div class="container">
-    <h1><span class="p1-score">0</span> to <span class="p2-score">0</span></h1>
 
+  <div class="container">
+    <h1>
+      <span class="p1-score">0</span> 
+      <span>:</span>  
+      <span class="p2-score">0</span>
+    </h1>
     <p id="winner"></p>
-
-    <p>Playing to: <span id="score-goal">5</span></p>
-    <input type="number" min="0">
+    <p>Игра до: <span id="score-goal">3</span></p>
     <div class="buttons">
-      <button id="p1">Player One</button>
-      <button id="p2">Player Two</button>
-      <button id="reset">Reset</button>
+      <button id="p1">Первый игрок</button>
+      <button id="p2">Второй игрок</button>
+      <button id="reset">Начать заново</button>
     </div>
   </div>
-<!-- partial -->
-  <script  src="./script.js"></script>
 
+  <script  src="./script.js"></script>
 </body>
 </html>
