change mini calendar

--- a/date/mini_calendar/index.html
+++ b/date/mini_calendar/index.html
@@ -15,6 +15,11 @@
     <p class="day-number" id="day-number">20</p>
     <p class="year" id="year">2020</p>
   </div>
+  <select name="lang" id="lang">
+    <option value="en">English</option>
+    <option value="ua">Український</option>
+    <option value="ru">Руский</option>
+  </select>
 
   <script src="index.js"></script>
 </body>
