--- a/loop/random_color/index.html
+++ b/loop/random_color/index.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Случайный цвет</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<h1>Случайный цвет</h1>
-<div class="block"></div>
-<div class="color">#008000</div>
+<h1>Гереатор случайного цвета</h1>
+<div class="block">#008000</div>
 <button class="btn">Сгенерировать цвет</button>
 
 <script src="script.js"></script>
