change block number

--- a/array/block_number/index.html
+++ b/array/block_number/index.html
@@ -2,15 +2,15 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Get order number in Unordered List</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+  <title>Нумерация блоков</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
   <div class="container">
+    <!-- select -->
     <select id="num">
-      <option value="">Не ввыбран</option>
+      <option value="">Не выбран</option>
       <option value="1">1</option>
       <option value="2">2</option>
       <option value="3">3</option>
@@ -18,16 +18,17 @@
       <option value="5">5</option>
       <option value="6">6</option>
       <option value="7">7</option>
+      <option value="reset">Сбросить</option>
     </select>
     <!-- blocks -->
     <div class="block-wrp">
-      <div class='block'>Block</div>
-      <div class='block'>Block</div>
-      <div class='block'>Block</div>
-      <div class='block'>Block</div>
-      <div class='block'>Block</div>
-      <div class='block'>Block</div>
-      <div class='block'>Block</div>
+      <div class='block'>Блок</div>
+      <div class='block'>Блок</div>
+      <div class='block'>Блок</div>
+      <div class='block'>Блок</div>
+      <div class='block'>Блок</div>
+      <div class='block'>Блок</div>
+      <div class='block'>Блок</div>
     </div>
   </div>
 
