--- a/settimeout/text_change_color/index.html
+++ b/settimeout/text_change_color/index.html
@@ -9,14 +9,12 @@
 </head>
 <body>
 
-	<div class="container">
-			<p  id='text'>Скрипт, позволяющий изменять цвет текста в динамике. </p>
-			<button id="start">Запустить скрипт</button>
-			<button id="stop">Остановить скрипт</button>
-	</div>
+<div class="container">
+	<p id='text'>Скрипт меняет цвет текста в динамике</p>
+	<button class="btn">Запустить скрипт</button>
+</div>
 
-
-	<script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
 
