--- a/date/analog_clock/index.html
+++ b/date/analog_clock/index.html
@@ -11,6 +11,7 @@
     <div id="hour"></div>
     <div id="minute"></div>
     <div id="second"></div>
+    <!-- <div class="disc"></div> -->
 </div>
 
 <script  src="./script.js"></script>
