change rotate square

--- a/event/rotate_square/index.html
+++ b/event/rotate_square/index.html
@@ -12,11 +12,11 @@
 <h1>Выберите точку поворота квадрата  при наведении</h1>
 
 <select name="dots" id="">
-    <option value="50% 50%">По центру</option>
-    <option value="0 0">точка 1</option>
-    <option value="100% 0">точка 2</option>
-    <option value="100% 100%">точка 3</option>
-    <option value="0 100%">точка 4</option>
+    <option value="50% 50%">По центру - (50% 50%)</option>
+    <option value="0 0">точка 1 - (0 0)</option>
+    <option value="100% 0">точка 2 - (100% 0)</option>
+    <option value="100% 100%">точка 3 - (100% 100%)</option>
+    <option value="0 100%">точка 4 - (0 100%)</option>
 </select>
 
 <div class="card">
