--- a/loop/month_calender/index.html
+++ b/loop/month_calender/index.html
@@ -8,27 +8,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="calender">
-        <div class="month">
-          <div class="date">
-            <h1></h1>
-            <p></p>
-          </div>
-        </div>
-        <div class="weekdays">
-          <div>Mon</div>
-          <div>Tue</div>
-          <div>Wed</div>
-          <div>Thu</div>
-          <div>Fri</div>
-          <div>Sat</div>
-          <div>Sun</div>
-        </div>
-        <div class="days"></div>
-      </div>
-    </div>
+
+<div class="calender">
+  <div class="header">
+    <div class="month"></div>
+    <div class="date"></div>
+  </div>
+  <div class="weekdays">
+    <div>Пон</div>
+    <div>Вт</div>
+    <div>Ср</div>
+    <div>Чет</div>
+    <div>Пят</div>
+    <div>Суб</div>
+    <div>Вос</div>
+  </div>
+  <div class="days"></div>
+</div>
+
     <script src="index.js"></script>
-	 <!-- <script src="test.js"></script> -->
   </body>
 </html>
