--- a/event/add_size_click/index.html
+++ b/event/add_size_click/index.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Circle</title>
+    <title>Increase Size</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <h1>Hover circle</h1>
-    
-    <div class="left"></div>
-    <div class="center"></div>
-    <div class="right"></div>
+    <div class="box">Click me</div>
 
     <script src="script.js"></script>
 </body>
