--- a/tasks/event/move_circles.html
+++ b/tasks/event/move_circles.html
@@ -21,6 +21,15 @@
 		</div>
 	</div>
 	<div class="row">
+		<div class="col-8 mx-auto">
+			<h2 class="text-center">Задание</h2>
+			<ol class="task">
+				<li>При наведении на красный круг слева и справа должны выдвигаться зеленый и синий круг</li>
+				<li>Если курсор ушел с красного круга, синий и зеленый возвращаются на свои места под красным</li>
+			</ol>
+		</div>
+	</div>
+	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
 				<a target="_blank" href="https://priymakvl.github.io/js_tasks/event/move_circles/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
