--- a/tasks/attribute/index.html
+++ b/tasks/attribute/index.html
@@ -56,6 +56,17 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Change Image List -->
+                        <tr>
+                            <td class="text-center">4</td>
+                            <td>
+                                <a href="change_img_list.html">Change Image List</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_img_list.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
