--- a/tasks/attribute/change_img_list.html
+++ b/tasks/attribute/change_img_list.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/style.css">
-	<title>Lamp - JavaScript Task</title>
+	<title>Change Image List - JavaScript Task</title>
 </head>
 <body>
     
 
 <div class="container">
-	<h1 class="text-center mt-3">Lamp - JavaScript Task</h1>
+	<h1 class="text-center mt-3">Change Image List - JavaScript Task</h1>
 	<div class="row">
 		<div class="col mx-auto">
 			<div class="screenshot-wrp">
-				<img src="screenshots/lamp.png">
+				<img src="screenshots/change_img_list.png">
 			</div>
 		</div>
 	</div>
@@ -24,16 +24,16 @@
 		<div class="col-8 mx-auto">
 			<h2 class="text-center">Задание</h2>
 			<ol class="task">
-				<li>При клике по кнопкам включить, выключить изменять изображение и фон</li>
+				<li>При клике по пункту изменять изображение</li>
 			</ol>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/properties/lamp/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="https://drive.google.com/file/d/1GSWLbRmFmqTMg4J6YI2TiwkcGEfGOfPk/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
-				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/properties/lamp" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
+				<a target="_blank" href="https://priymakvl.github.io/js_tasks/properties/change_img_list/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a target="_blank" href="https://drive.google.com/file/d/10iJiLCT8jdWFlNdmoVS41mnkHIlV8lQ6/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/properties/change_img_list" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
 			</div>
 		</div>
