--- a/tasks/if/add_border_input.html
+++ b/tasks/if/add_border_input.html
@@ -34,7 +34,7 @@
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
 				<a target="_blank" href="https://priymakvl.github.io/js_tasks/form/add_border_input/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="" class="https://drive.google.com/file/d/10LA-nqtvVCkYfd2H3QslXDZJi-vcUcHJ/view?usp=sharing">Шпаргалка</a>
+				<a target="_blank" href="https://drive.google.com/file/d/10LA-nqtvVCkYfd2H3QslXDZJi-vcUcHJ/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
 				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/form/add_border_input" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
 			</div>
