add task print text

--- a/tasks/form/index.html
+++ b/tasks/form/index.html
@@ -23,6 +23,17 @@
                     </tr>
                     </thead>
                     <tbody>
+                        <!-- Print Text -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="print_text.html">Print Text</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/print_text.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Change Font Size -->
                         <tr>
                             <td class="text-center">2</td>
