--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -56,6 +56,17 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Insert Text -->
+                        <tr>
+                            <td class="text-center">4</td>
+                            <td>
+                                <a href="insert_text.html">Insert Text</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/insert_text.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Counter Click -->
                         <tr>
                             <td class="text-center">3</td>
