--- a/tasks/form/index.html
+++ b/tasks/form/index.html
@@ -56,6 +56,28 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Border Style Radio -->
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="border_style_radio.html">Border Style Radio</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/border_style_radio.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                          <!-- Change Bg Radio-->
+                          <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="change_bg_radio.html">Change Bg Radio</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_bg_radio.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Seasons -->
                         <tr>
                             <td class="text-center">4</td>
