--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -23,6 +23,39 @@
                     </tr>
                     </thead>
                     <tbody>
+                        <!-- More Number -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="more_number.html">More Number</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/more_number.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Change Bg Click -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="change_bg_click.html">Change Bg Click</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_bg_click.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                         <!-- Hidden Block Click -->
+                         <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="hidden_block_click.html">Hidden Block Click</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/hidden_block_click.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Add Border Input -->
                         <tr>
                             <td class="text-center">1</td>
