--- a/tasks/if/hidden_block_click.html
+++ b/tasks/if/hidden_block_click.html
@@ -32,7 +32,7 @@
 	<div class="row">
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
-				<a target="_blank" href="https://priymakvl.github.io/js_tasks/if/hidden_block_click.html" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
+				<a target="_blank" href="https://priymakvl.github.io/js_tasks/if/hidden_block_click/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
 				<a target="_blank" href="https://drive.google.com/file/d/1RzfqGETsQ6EowiZjCeieRjPdeCSNggJl/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
 				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/if/hidden_block_click" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
