add task guess number if

--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -67,7 +67,17 @@
                             </td>
                             <td></td>
                         </tr>
-
+                        <!-- Guess Number -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="guess_number.html">Guess Number</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/guess_number.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
