--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -122,6 +122,17 @@
                             </td>
                             <td></td>
                         </tr>
+                         <!-- Random Color RGB -->
+                         <tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="random_color_rgb.html">Random Color RGB</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/random_color_rgb.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Spinning Wheel -->
                         <tr>
                             <td class="text-center">7</td>
