--- a/event/random_color_rgb/index.html
+++ b/event/random_color_rgb/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h1>Гереатор случайного цвета</h1>
+<h1>Генератор случайного цвета</h1>
 <div class="block">rgb(0, 0, 0)</div>
 <button class="btn">Сгенерировать цвет</button>
 
