change mini calendar

--- a/tasks/date/index.html
+++ b/tasks/date/index.html
@@ -23,9 +23,20 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- More Number -->
+                        <!-- Mini Calendar -->
                         <tr>
                             <td class="text-center">1</td>
+                            <td>
+                                <a href="mini_calendar.html">Mini Calendar</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/mini_calendar.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Analog Clock -->
+                        <tr>
+                            <td class="text-center">2</td>
                             <td>
                                 <a href="analog_clock.html">Analog Clock</a>
                             </td>
