add task counter click square

--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -71,23 +71,11 @@
                         <tr>
                             <td class="text-center">3</td>
                             <td>
-                                <a href="counter_click.html">Counter Click</a>
+                                <a href="counter_click/index.html">Counter Click</a>
                             </td>
                             <td>
-                                <img class="screenshot" src="screenshots/counter_click.png" alt="">
                             </td>
-                            <td></td>
-                        </tr>
-                        <!-- Counter Buttons -->
-                        <tr>
-                            <td class="text-center">4</td>
-                            <td>
-                                <a href="counter_buttons.html">Counter Buttons</a>
-                            </td>
-                            <td>
-                                <img class="screenshot" src="screenshots/counter_buttons.png" alt="">
-                            </td>
-                            <td></td>
+                            <td>папка</td>
                         </tr>
                          <!-- Create Figures -->
                          <tr>
