add task collabsible - if

--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -67,6 +67,17 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Collabsible -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="collabsible.html">Collabsible</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/collabsible.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Guess Number -->
                         <tr>
                             <td class="text-center">1</td>
