--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -89,6 +89,17 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Guess Color -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="guess_color.html">Guess Color</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/guess_color.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                     </tbody>
                 </thead>
             </table>
