add task good cheap fast - if

--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -78,6 +78,17 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Good Cheap Fast -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="good_cheap_fast.html">Good Cheap Fast</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/good_cheap_fast.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Guess Number -->
                         <tr>
                             <td class="text-center">1</td>
