change task arrange numbers

--- a/loop/arrange_numbers/index.html
+++ b/loop/arrange_numbers/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
 	<meta charset="UTF-8">
-	<title>Simple game</title>
+	<title>Arrange Numbers Game</title>
 	<link rel="stylesheet" href="./style.css">	
 </head>
 <body>
@@ -18,8 +18,8 @@
 	</div>
 
 	<div class="end-message">
-		<div class="game-result">Поздравляем с победой!</div>
-		<div class="time-info">Вы прошли игру за <span class="game-time">45</span> сек</div>
+		<div class="game-result"></div>
+		<div class="time-info">Вы прошли игру за <span class="game-time"></span> сек</div>
 		<button class="restart-btn">Ещё раз?</button>
 	</div>
 
