add task change img click - array

--- a/tasks/array/index.html
+++ b/tasks/array/index.html
@@ -23,6 +23,17 @@
                     </tr>
                     </thead>
                     <tbody>
+                        <!-- Change Image Click -->
+                        <tr>
+                            <td class="text-center">1</td>
+                            <td>
+                                <a href="change_img_click.html">Change Image Click</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_img_click.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Click Carousel -->
                         <tr>
                             <td class="text-center">2</td>
