--- a/tasks/index.html
+++ b/tasks/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center">JavaScript Tasks</h1>
+        <h1 class="text-center">JavaScript Base - Tasks</h1>
         <div class="row">
-                <div class="col-5 mx-auto">
+                <div class="col-6 ">
                     <div class="list-group">
                         <a target="_blank" href="event/index.html" class="list-group-item list-group-item-action list-group-item-secondary">Event</a>
                     </div>
@@ -31,6 +31,8 @@
                     <div class="list-group">
                         <a target="_blank" href="timeout/" class="list-group-item list-group-item-action list-group-item-secondary">Timeout</a>
                     </div>
+                </div>
+                <div class="col-6 ">
                     <div class="list-group">
                         <a target="_blank" href="date/" class="list-group-item list-group-item-action list-group-item-secondary">Date</a>
                     </div>
