add tasks -array

--- a/tasks/array/index.html
+++ b/tasks/array/index.html
@@ -34,14 +34,80 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Click Carousel -->
+                        <!-- Traffic Light -->
                         <tr>
                             <td class="text-center">2</td>
+                            <td>
+                                <a href="traffic_light.html">Traffic Light</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/traffic_light.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Block Number -->
+                        <tr>
+                            <td class="text-center">4</td>
+                            <td>
+                                <a href="block_number.html">Block Number</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/block_number.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Blur Text -->
+                        <tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="blur_text.html">Blur Text</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/blur_text.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Calculator -->
+                        <tr>
+                            <td class="text-center">6</td>
+                            <td>
+                                <a href="calculator.html">Calculator</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/calculator.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Click Carousel -->
+                        <tr>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="click_carousel.html">Click Carousel</a>
                             </td>
                             <td>
                                 <img class="screenshot" src="screenshots/click_carousel.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Filter Tabs -->
+                        <tr>
+                            <td class="text-center">8</td>
+                            <td>
+                                <a href="filter_tabs.html">Filter Tabs</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/filter_tabs.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Rock Paper Scissors -->
+                        <tr>
+                            <td class="text-center">9</td>
+                            <td>
+                                <a href="rock_paper_scissors.html">Rock Paper Scissors</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/rock_paper_scissors.png" alt="">
                             </td>
                             <td></td>
                         </tr>
