add task change size circle

--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -88,6 +88,17 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Change Size Circle -->
+                        <tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="change_size_circle.html">Change Size Circle</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/change_size_circle.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Move Circles -->
                         <tr>
                             <td class="text-center">5</td>
