change guess_color - if

--- a/tasks/if/guess_color.html
+++ b/tasks/if/guess_color.html
@@ -34,7 +34,7 @@
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
 				<a target="_blank" href="https://priymakvl.github.io/js_tasks/if/guess_color/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<!-- <a target="_blank" href="https://drive.google.com/file/d/1X8LQo2J68mSH9Qm1vLPNdWa1Q2vSYSEI/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a> -->
+				<a target="_blank" href="https://drive.google.com/file/d/1BmEteE6OM5SzNjooJDb2dtW51UVkgbew/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
 				<a target="_blank" href="https://github.com/PriymakVl/js_tasks/tree/main/if/guess_color" class="list-group-item list-group-item-action list-group-item-secondary" >Github</a>
 				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
 			</div>
