--- a/tasks/date/index.html
+++ b/tasks/date/index.html
@@ -23,9 +23,53 @@
                     </tr>
                     </thead>
                     <tbody>
-                        <!-- Mini Calendar -->
+                        <!-- Date Format -->
                         <tr>
                             <td class="text-center">1</td>
+                            <td>
+                                <a href="date_format.html">Date Format</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/date_format.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Hello Hour -->
+                        <tr>
+                            <td class="text-center">2</td>
+                            <td>
+                                <a href="hello_hour.html">Hello Hour</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/hello_hour.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Day Week Ru -->
+                        <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="day_week_ru.html">Day Week Ru</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/day_week_ru.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                         <!-- Day Week Highlight -->
+                         <tr>
+                            <td class="text-center">3</td>
+                            <td>
+                                <a href="day_week_highlight.html">Day Week Highlight</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/day_week_highlight.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Mini Calendar -->
+                        <tr>
+                            <td class="text-center">4</td>
                             <td>
                                 <a href="mini_calendar.html">Mini Calendar</a>
                             </td>
@@ -34,9 +78,31 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Digital Clock -->
+                        <tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="digital_clock.html">Digital Clock</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/digital_clock.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Blinck Clock -->
+                        <tr>
+                            <td class="text-center">6</td>
+                            <td>
+                                <a href="blinck_clock.html">Blinck Clock</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/blinck_clock.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Analog Clock -->
                         <tr>
-                            <td class="text-center">2</td>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="analog_clock.html">Analog Clock</a>
                             </td>
