add smooth scroll array

--- a/tasks/array/index.html
+++ b/tasks/array/index.html
@@ -67,9 +67,20 @@
                             </td>
                             <td></td>
                         </tr>
-                        <!-- Calculator -->
+                        <!-- Smooth Scroll -->
                         <tr>
                             <td class="text-center">6</td>
+                            <td>
+                                <a href="smooth_scroll.html">Smooth Scroll</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/smooth_scroll.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
+                        <!-- Calculator -->
+                        <tr>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="calculator.html">Calculator</a>
                             </td>
@@ -80,7 +91,7 @@
                         </tr>
                         <!-- Click Carousel -->
                         <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="click_carousel.html">Click Carousel</a>
                             </td>
@@ -91,7 +102,7 @@
                         </tr>
                         <!-- Filter Tabs -->
                         <tr>
-                            <td class="text-center">8</td>
+                            <td class="text-center">9</td>
                             <td>
                                 <a href="filter_tabs.html">Filter Tabs</a>
                             </td>
@@ -102,7 +113,7 @@
                         </tr>
                         <!-- Rock Paper Scissors -->
                         <tr>
-                            <td class="text-center">9</td>
+                            <td class="text-center">10</td>
                             <td>
                                 <a href="rock_paper_scissors.html">Rock Paper Scissors</a>
                             </td>
