add class list tasts

--- a/tasks/index.html
+++ b/tasks/index.html
@@ -40,7 +40,7 @@
                         <a target="_blank" href="loop/" class="list-group-item list-group-item-action list-group-item-secondary">Loop</a>
                     </div>
                     <div class="list-group">
-                        <a target="_blank" href="class/" class="list-group-item list-group-item-action list-group-item-secondary">Class</a>
+                        <a target="_blank" href="class_list/" class="list-group-item list-group-item-action list-group-item-secondary">clasList</a>
                     </div>
                     <div class="list-group">
                         <a target="_blank" href="element/" class="list-group-item list-group-item-action list-group-item-secondary">Element</a>
