add task open modal - event

--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -67,9 +67,20 @@
                             </td>
                             <td></td>
                         </tr>
+                        <!-- Open Modal -->
+                        <tr>
+                            <td class="text-center">5</td>
+                            <td>
+                                <a href="insert_text.html">Open Modal</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/open_modal.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Counter Click -->
                         <tr>
-                            <td class="text-center">3</td>
+                            <td class="text-center">6</td>
                             <td>
                                 <a href="counter_click/index.html">Counter Click</a>
                             </td>
@@ -79,7 +90,7 @@
                         </tr>
                          <!-- Create Figures -->
                          <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="create_figures.html">Create Figures</a>
                             </td>
@@ -90,7 +101,7 @@
                         </tr>
                         <!-- Change Size Circle -->
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="change_size_circle.html">Change Size Circle</a>
                             </td>
@@ -101,7 +112,7 @@
                         </tr>
                         <!-- Move Circles -->
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">9</td>
                             <td>
                                 <a href="move_circles.html">Move Circles</a>
                             </td>
@@ -112,7 +123,7 @@
                         </tr>
                         <!-- Inner Disc Hover -->
                         <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">10</td>
                             <td>
                                 <a href="inner_disc_hover.html">Inner Disc Hover</a>
                             </td>
@@ -123,7 +134,7 @@
                         </tr>
                          <!-- Random Color RGB -->
                          <tr>
-                            <td class="text-center">5</td>
+                            <td class="text-center">11</td>
                             <td>
                                 <a href="random_color_rgb.html">Random Color RGB</a>
                             </td>
@@ -134,7 +145,7 @@
                         </tr>
                         <!-- Spinning Wheel -->
                         <tr>
-                            <td class="text-center">7</td>
+                            <td class="text-center">12</td>
                             <td>
                                 <a href="spinning_wheel.html">Spinning Wheel</a>
                             </td>
