--- a/tasks/event/insert_text.html
+++ b/tasks/event/insert_text.html
@@ -33,7 +33,7 @@
 		<div class="col-5 mx-auto">
 			<div class="list-group mt-3">
 				<a target="_blank" href="https://priymakvl.github.io/js_tasks/event/insert_text/" class="list-group-item list-group-item-action list-group-item-secondary">Демо</a>
-				<a target="_blank" href="" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
+				<a target="_blank" href="https://drive.google.com/file/d/1LVqUhC-paSYpCf8RRwVi-F6wFPTMPcZ6/view?usp=sharing" class="list-group-item list-group-item-action list-group-item-secondary">Шпаргалка</a>
 				<a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://github.com/PriymakVl/js_tasks/tree/main/event/insert_text">Github</a>
 				<!-- <a target="_blank" class="list-group-item list-group-item-action list-group-item-secondary" href="https://youtu.be/qlX4rSFoPdE">Видео</a> -->
 			</div>
