--- a/tasks/if/index.html
+++ b/tasks/if/index.html
@@ -36,7 +36,7 @@
                         </tr>
                         <!-- Change Bg Click -->
                         <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">2</td>
                             <td>
                                 <a href="change_bg_click.html">Change Bg Click</a>
                             </td>
@@ -47,7 +47,7 @@
                         </tr>
                          <!-- Hidden Block Click -->
                          <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">3</td>
                             <td>
                                 <a href="hidden_block_click.html">Hidden Block Click</a>
                             </td>
@@ -58,7 +58,7 @@
                         </tr>
                         <!-- Add Border Input -->
                         <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">4</td>
                             <td>
                                 <a href="add_border_input.html">Add Border Input</a>
                             </td>
@@ -69,7 +69,7 @@
                         </tr>
                         <!-- Collabsible -->
                         <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">5</td>
                             <td>
                                 <a href="collabsible.html">Collabsible</a>
                             </td>
@@ -78,9 +78,20 @@
                             </td>
                             <td></td>
                         </tr>
+						<!-- Move Square Arrow -->
+                        <tr>
+                            <td class="text-center">6</td>
+                            <td>
+                                <a href="move_square_arrow.html">Move Square Arrow</a>
+                            </td>
+                            <td>
+                                <img class="screenshot" src="screenshots/move_square_arrow.png" alt="">
+                            </td>
+                            <td></td>
+                        </tr>
                         <!-- Good Cheap Fast -->
                         <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">7</td>
                             <td>
                                 <a href="good_cheap_fast.html">Good Cheap Fast</a>
                             </td>
@@ -91,7 +102,7 @@
                         </tr>
                         <!-- Guess Number -->
                         <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">8</td>
                             <td>
                                 <a href="guess_number.html">Guess Number</a>
                             </td>
@@ -102,7 +113,7 @@
                         </tr>
                         <!-- Guess Color -->
                         <tr>
-                            <td class="text-center">1</td>
+                            <td class="text-center">9</td>
                             <td>
                                 <a href="guess_color.html">Guess Color</a>
                             </td>
