add task open modal event

--- a/tasks/event/index.html
+++ b/tasks/event/index.html
@@ -71,7 +71,7 @@
                         <tr>
                             <td class="text-center">5</td>
                             <td>
-                                <a href="insert_text.html">Open Modal</a>
+                                <a href="open_modal.html">Open Modal</a>
                             </td>
                             <td>
                                 <img class="screenshot" src="screenshots/open_modal.png" alt="">
